--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <title>Hello Worlds!</title>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.13/vue.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.min.css">
+  <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css">
+  <!--<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
   <link rel="stylesheet" href="main.css">
 </head>
 
@@ -16,7 +17,6 @@
       <table>
         <thead>
           <tr>
-
           </tr>
         </thead>
         <tbody>
@@ -37,10 +37,6 @@
             <td><input type="text" v-model="workername"></td>
           </tr>
           <tr>
-            <td>Password</td>
-            <td><input type="text" v-model="password"></td>
-          </tr>
-          <tr>
             <td>Location</td>
             <td><input type="text" v-model="location"></td>
           </tr>
@@ -53,35 +49,42 @@
             <td><input type="text" v-model="gpunum"></td>
           </tr>
         </tbody>
+        <tr>
+          <td>Poolname</td>
+          <td>
+            <select v-model="poolname">
+              <option disabled value="">
+                Please Select One
+              </option>
+              <option v-for="pool in poolnames">
+                {{ pool }}
+              </option>
+            </select>
+          </td>
+        </tr>
       </table>
-      <div class="row">
-        <div class="column" v-for="algo in totalAlgos">
-          <input type="checkbox" id="algo" v-bind:value="algo" v-model="checkedAlgos">
-          <label for="algo">{{ algo }}</label>
-        </div>
 
+      <div class="container">
+        <div class="row">
+          <div class="col-md-2" v-for="algo in pools[poolname]">
+            <input :name="'algo_' + algo" type="checkbox" v-bind:value="algo" v-model="checkedAlgos">
+            <label :for="'algo_' + algo">{{ algo }}</label>
+          </div>
+        </div>
       </div>
+
       <div class="row special">
-        <div class="column column-25">
-          <button v-on:click="startMining" class="button" href="#">MiningPoolHub</button>
-        </div>
-        <div class="column column-25">
-          <button v-on:click="startMining" class="button" href="#">Hash Refinery</button>
-        </div>
-        <div class="column column-25">
-          <button v-on:click="startMining" class="button" href="#">ZPool</button>
-        </div>
-        <div class="column column-25">
-          <button v-on:click="startMining" class="button" href="#">HashingPool</button>
+        <div class="col-sm">
+          <a v-if="gpunum > 0 && poolname != '' && checkedAlgos != ''" id="downloadClass" href="">
+            <button v-on:click="downloadBat('start.bat', 'text/plain', poolname)" class="button" href="">Download</button>
+          </a>
         </div>
       </div>
     </div>
   </div>
-  <!-- All of the Node.js APIs are available in this renderer process. -->
 
   <script>
     // You can also require other files to run in this process
-    require('./renderer.js')
     require('./vuemain.js')
   </script>
 </body>
