--- a/index.html
+++ b/index.html
@@ -9,12 +9,26 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css">
   <link rel="stylesheet" href="main.css">
-</head>
+  <script type="text/javascript" src="titlebar.js">
 
-<body>
+  </script>
+</head>
+<!-- 3, 4, 8,  -->
+<body class="scrollbar" id="style-8">
+
+
+  <div class="title-bar">
+    <div class="title-bar-title"><a>MasGUI 0.9.0</a></div>
+    <div class="title-bar-btns">
+      <button v-on:click="titleBar" id="min-btn">-</button>
+      <button v-on:click="titleBar" id="max-btn">+</button>
+      <button v-on:click="titleBar" id="close-btn">x</button>
+    </div>
+  </div>
   <div id="vueapp">
     <div class="container-fluid">
       <div class="jumbotron">
+
 
         <h1 class="title">MasGUI</h1>
 
