--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="scrollbar" id="style-8">
 
 
-  <div class="title-bar">
+  <div class="title-bar noselect">
     <div class="title-bar-title"><a>MasGUI 0.9.0</a></div>
     <div class="title-bar-btns">
       <button v-on:click="titleBar" id="min-btn">-</button>
@@ -29,31 +29,14 @@
     <div class="container-fluid">
       <div class="jumbotron">
 
-
         <h1 class="title">MasGUI</h1>
-
-
-
-
-        <!-- OLD
-        <template v-for="inp in inputs">
-          <div class="row">
-            <div class="col col-lg-3">
-              {{ inp.name }}
-            </div>
-            <div class="col col-lg-3 input-group mb-3">
-              <input type="text" class="form-control" v-bind:placeholder="inp.value" v-model="inp.value"/>
-            </div>
-          </div>
-        </template>
-        -->
 
         <!-- Inputs -->
         <template v-for="inp in inputs">
           <div class="form-group">
-            <label :for="inp.value[0]">{{ inp.name }}</label>
-            <input type="text" class="form-control" aria-describedby="inp.value[0]" :placeholder="inp.value[0]" v-model="inp.value[0]">
-            <small id="inp.value[0]" class="form-text text-muted">{{ inp.value[1] }}</small>
+            <label :for="inp.value">{{ inp.name }}</label>
+            <input type="text" class="form-control" aria-describedby="inp.value" :placeholder="inp.value" v-model="inp.value">
+            <small id="inp.value" class="form-text text-muted">{{ inp.help }}</small>
           </div>
         </template>
 
@@ -83,7 +66,7 @@
           </div>
         </div>
 
-        <button v-if="inputs.gpunum.value[0] > 0 && poolname != '' && checkedAlgos != ''" v-on:click="startblah" type="button" class="btn btn-primary btn-block">Start Mining</button>
+        <button v-if="inputs.gpunum.value > 0 && poolname != '' && checkedAlgos != ''" v-on:click="startblah" type="button" class="btn btn-primary btn-block">Start Mining</button>
         <br>
 
         <!-- Select
